Fixed prof pic from JPG to jpg

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
 
                 <div class="project">
-                    <img src="brissa.JPG" width="400">
+                    <img src="brissa.jpg" width="400">
                     <div>
                     <h1> Brissa Garcia-Sandoval </h1>
                     <p> I am a computer science major, with lots of interest and growing knowledge in software development, along with being an aspiring UI/UX Designer with a passion for designing functional and creative user experiences.
